Initial draft snake implementation
